MB-39338 magma-kvstore: Add Status::DiskFull error code to rollback errors

Change-Id: I9abf47ccd5ff8075e3c9f4979d4ea6ef75dd06f1
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/157996
Reviewed-by: Sarath Lakshman <sarath@couchbase.com>
Tested-by: Sarath Lakshman <sarath@couchbase.com>